# mtg-mcp

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  server.json
.github/workflows/: publish-mcp.yml  test.yml
docs/: CONFIGURATION.md  QUICKSTART.md  SETUP.md  TOOLS.md
mtg_mcp/: __init__.py  __main__.py  utils.py
mtg_mcp/tools/: __init__.py  archidekt.py  cardtypes.py  combos.py  commander.py  context.py  moxfield.py  rules.py  ruling.py
tests/: README.md  __init__.py  test_archidekt.py  test_cardtypes.py  test_combos.py  test_commander.py  test_context.py  test_moxfield.py  test_rules.py  test_ruling.py  test_utils.py
