[project]
name = "mtg-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server providing comprehensive Magic: The Gathering information for AI assistants"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "wtfregia", email = "wtfregia@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "magic-the-gathering", "mtg", "commander", "edh", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.2.0",
    "mtgsdk>=1.3.1",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/wtfregia/mtg-mcp"
Repository = "https://github.com/wtfregia/mtg-mcp"
Issues = "https://github.com/wtfregia/mtg-mcp/issues"

[project.scripts]
mtg-mcp = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]
